Fixing overflow issue incorrectly applied to html tag

--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -23,7 +23,7 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#111111',GradientType=1 ); /* IE6-9 */
 }
 
-html, body {
+body {
   overflow:hidden;
 }
 
